--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,17 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: none;
 }
+
+.wf-loading p { font-family: sans-serif; }
+.wf-inactive p { font-family: sans-serif; }
+.wf-active p { font-family: 'Alegreya', sans-serif; width:400px; margin-left: 20px; }
+.wf-loading h1 { font-family: sans-serif; font-weight: 400; font-size: 24px; }
+.wf-inactive h1 { font-family: sans-serif; font-weight: 400; font-size: 24px; }
+.wf-active h1 { font-family: 'Aclonica', sans-serif; font-weight: 400; font-size: 24px; }
+.wf-loading h2 { font-family: sans-serif; font-weight: 300; font-size: 20px; color: #5E5E5E; }
+.wf-inactive h2 { font-family: sans-serif; font-weight: 300; font-size: 20px; color: #5E5E5E; }
+.wf-active h2 { font-family: 'Acme', sans-serif; font-weight: 300; font-size: 20px; color: #5E5E5E; }
+
 body { margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; }
 body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
 
@@ -32,7 +43,7 @@ header p span { font-size: 0.8em; font-weight: normal;}
 }
 
 .content { padding: 1em 1em; }
-.content li { list-style-type: none; font-size: 1.1em;}
+.content li { list-style-type: none; font-size: 1.1em; }
 li img { float:left; padding-right: 1em; }
 li p { font-size: 0.9em; font-style: italic; }
 
